@@ -1,3 +1,11 @@
+2019-10-17  Mark Eggleston <mark.eggleston@codethink.com>
+
+	* gfortran.dg/auto_in_equiv_3.f90: New test.
+	* gfortran.dg/auto_in_equiv_4.f90: New test.
+	* gfortran.dg/auto_in_equiv_5.f90: New test.
+	* gfortran.dg/auto_in_equiv_6.f90: New test.
+	* gfortran.dg/auto_in_equiv_7.f90: New test.
+
 2019-10-17  Georg-Johann Lay  <avr@gjlay.de>
 
 	* gcc.target/avr/progmem-error-1.cpp: Fix location of the
